Fixed Chrome grid alignment issue

--- a/css/style.scss
+++ b/css/style.scss
@@ -251,6 +251,7 @@ address{
 
 // Prevent last column from overflowing to next line
 .last {
+  display: inline-block;
   float: right;
   margin-right: 0 !important;
 }
